Revert Fix color to set icon visible
ERM25119

[4.0.x]

--- a/resources/stylesheets/oo-ui/oo-ui.less
+++ b/resources/stylesheets/oo-ui/oo-ui.less
@@ -39,16 +39,15 @@ body.mediawiki #content #bodyContent{
 				&.oo-ui-flaggedElement-destructive {
 					& > .oo-ui-buttonElement-button {
 						color: @color-destructive;
-						background-color: @color-destructive;
+						background-color: @background-color-destructive;
 						border-color: @border-color-destructive;
 
 						&:hover,
 						&:focus {
 							color: @color-hover-destructive;
-							background-color: @color-hover-destructive;
+							background-color: @background-color-hover-destructive;
 							border-color: @border-color-hover-destructive;
 							box-shadow: inset 0 0 0 2px @border-color-hover-destructive;
-							opacity: 0.8;
 						}
 					}
 				}
